compiler-plugin/src/testData/export/Class.kt
package export

<!EXPORTED_MARKER_Classifier(packageName=[export], classNames=[MyClass])!>@ExportSymbol
class MyClass<!>

class NotExported